# chronoh

./: .gitignore  Cargo.toml  README.md  代理架构综述.docx
docs/: chronoh-design.md
docs/plans/: 2025-02-28-chronoh-implementation.md
src/: error.rs  lib.rs  main.rs  types.rs
src/agents/: coder.rs  initializer.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/git/: bridge.rs  mod.rs
src/hooks/: clean_state.rs  context.rs  mod.rs  traits.rs
src/state/: engine.rs  handoff.rs  mod.rs
src/tools/: mod.rs  primitives.rs
tests/: coder_test.rs  error_test.rs  git_test.rs  handoff_test.rs  hook_test.rs  initializer_test.rs  integration_test.rs  state_engine_test.rs  tools_test.rs  types_test.rs
