[package]
name = "chrono-h"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Time-aware harness for long-running AI agents"
license = "MIT"
resolver = "2"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

sled = "0.34"

git2 = { version = "0.18", default-features = false, features = ["vendored-libgit2"] }

clap = { version = "4.4", features = ["derive"] }

async-trait = "0.1"

anyhow = "1.0"
thiserror = "1.0"

uuid = { version = "1.4", features = ["v4", "serde"] }

config = "0.13"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Force getrandom 0.2.x for Rust 1.82 compatibility
getrandom = "=0.2.15"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.12"
